[package]
name = "dumpsys-rs"
version = "0.1.1"
edition = "2021"
authors = ["shadow3"]
readme = "README.md"
repository = "https://github.com/reigadegr/dumpsys-rs"
description = "`dumpsys-rs` is a Rust library for retrieving and dumping service information in an Android system. It provides a convenient way to fetch detailed status information from different system services, similar to the `dumpsys` command in the Android shell.\n Origin repository:https://github.com/shadow3/dumpsys-rs "
license = "GPL-3.0"

[dependencies]
binder = { package = "binder_ndk", git = "https://github.com/reigadegr/binder_rs" }
os_pipe = "1.2.0"
thiserror = "1.0.61"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
incremental = false
